--- a/content/index.mkd
+++ b/content/index.mkd
@@ -1,3 +1,3 @@
-# Wikimarks
+# TREMA @ UNH
 
-Hello world.
+Text Retrieval Extraction Machine Learning and Analytics Lab at University of New Hampshire
