--- a/content/wikimarks/manuscript.mkd
+++ b/content/wikimarks/manuscript.mkd
@@ -5,6 +5,15 @@ Laura Dietz, Shubham Chatterjee, Connor Lennox, Sumanta Kashyapi, Pooja Oza, Ben
 
 Manuscript under submission.
 
+## Abstract
+
+We provide a resource for automatically harvesting relevance benchmarks from Wikipedia -- which we refer to as "Wikimarks" to differentiate them from manually created benchmarks. Unlike simulated benchmarks, they are based on manual annotations of Wikipedia authors.
+Studies on the TREC Complex Answer Retrieval track demonstrated that leaderboards under Wikimarks and manually annotated benchmarks are very similar.  Because of their availability, Wikimarks can fill an important need for Information Retrieval research.
+
+We provide a meta-resource to harvest Wikimarks for several information retrieval tasks across different languages: paragraph retrieval, entity ranking, query-specific clustering, outline prediction, and query-specific entity linking and many more. In addition, we provide example Wikimarks for English, Simple English, and Japanese derived from the 01/01/2022 Wikipedia dump. 
+
+The resource is available at <https://trema-unh.github.io/wikimarks/>
+
 # Introduction
 
 Many information retrieval benchmarks have complicated licensing
