--- a/content/wikimarks/index.mkd
+++ b/content/wikimarks/index.mkd
@@ -130,6 +130,58 @@ Horseshoe-crab:
   subset.[\[tab:data-stats\]]{#tab:data-stats label="tab:data-stats"}
 :::
 
+## Wikimark Statistics
+
+Number of train/test instances for each Wikimark.
+
+::: table*
+::: footnotesize
+  ----------------------- ------------------- --------- ---------- -- ------------------- --------- ----------- -- ---------------------- -------- -------- -- -------------------------- --------- ---------- --
+                            Relevant Passages                           Relevant Entities                            Clustering Instances                        Entity Linking Instances                      
+                                           en    simple         ja                     en    simple          ja                        en   simple       ja                            en    simple         jp 
+  vital-articles.test                  44,444     7,117     12,448                159,392    20,626      38,975                       521      328      393                        64,857     9,339     23,217 
+  vital-articles.train                 42,008     6,845     13,330                149,609    19,401      42,357                       528      324      440                        61,984     8,663     25,743 
+  good-articles.test                  408,454         7     23,869               1429,087        47      65,031                    17,088        1      626                       777,081         8     27,903 
+  good-articles.train                 415,034        17     24,375               1465,327        87      61,050                    17,362        1      626                       789,726        39     27,538 
+  US-history.test                      83,213       176         --                206,672       405          --                     4,232        6       --                       169,014       210         -- 
+  US-history.train                     83,255       146         --                205,438       608          --                     4,285        7       --                       160,764       173         -- 
+  horseshoe-crab.train                     21        11         --                     69        40          --                         1        1       --                            44        13         -- 
+  benchmarkY1.test                      6,554       434      1,160                 15,698     1,117       3,018                       131       23       56                         8,536       454      1,978 
+  benchmarkY1.train                     5,588       449      1,396                 14,744     1,273       3,440                       117       25       60                         7,258       513      2,152 
+  car-train-large.train             9,254,925   113,444   1496,289             19,764,159   249,369   3,462,123                   885,014    6,918   87,012                    25,423,934   185,203   3824,333 
+  test200.train                         5,537       109        335                 12,345       272         929                       188        5       19                         9,147       135        612 
+  ----------------------- ------------------- --------- ---------- -- ------------------- --------- ----------- -- ---------------------- -------- -------- -- -------------------------- --------- ---------- --
+:::
+:::
+
+
+## Evaluation Results for Reference Baselines
+
+
+
+
+::: table*
+  ------------------------------------------- -- ------------------- -------- ------- -------- ------------------ --------- ------- --------- -- -- ------------------- --------- ------- --------- ------------------ --------- ------- ---------
+                                                              simple                                                                                                 en                                                                  
+                                                   benchmarkY1.train                             benchmarkY1.test                                     benchmarkY1.train                               benchmarkY1.test                   
+  Paragraph Retrieval \[MAP\]                                                                                                                                                                                                            
+  bm25                                                         **0** **31**     **0** **04**                **0** **29**      **0** **03**                            0 +/-097             0 +/-01                         0 +/-094             0 +/-01
+  bm25-rm3                                                         0 29             0 04                        0 26              0 03                            **0** **107**     **0** **01**                 **0** **101**     **0** **01**
+  QL-rm3                                                           0 25             0 04                        0 20              0 02                                0 084             0 01                         0 076             0 01
+  Entity Ranking \[MAP\]                                                                                                                                                                                                                 
+  page-bm25                                                        0 03             0 005                       0 038             0 007                               0 025             0 002                        0 026             0 003
+  page-bm25-rm3                                                    0 05             0 007                       0 048             0 007                               0 037             0 003                        0 038             0 004
+  paragraph-bm25-ECM                                           **0** **23**     **0** **03**                **0** **253**     **0** **021**                       **0** **215**     **0** **01**                 **0** **21**      **0** **01**
+  Cluster \[Adjusted RAND Index\]                                                                                                                                                                                                        
+  TF-IDF agglomerative                                             0 16             0 06                        0 27              0 07                                0 15              0 01                         0 16              0 01
+  TF-IDF kmeans                                                    0 13             0 01                        0 12              0 01                                0 11              0 04                     **0** **19**      **0** **05**
+  SBERT kmeans                                                 **0** **38**     **0** **09**                **0** **38**      **0** **09**                        **0** **23**      **0** **02**                 **0** **19**      **0** **01**
+  Entity Linking \[Paragraph-Macro-avg F1\]                                                                                                                                                                                              
+  WAT                                                          **0** **44**     **0** **01**                **0** **42**      **0** **01**                        **0** **332**     **0** **004**                **0** **310**     **0** **003**
+  ------------------------------------------- -- ------------------- -------- ------- -------- ------------------ --------- ------- --------- -- -- ------------------- --------- ------- --------- ------------------ --------- ------- ---------
+:::
+
+
 
 
 ## License
