--- a/content/wikimarks/index.mkd
+++ b/content/wikimarks/index.mkd
@@ -304,19 +304,19 @@ Number of train/test instances for each Wikimark.
                                                               simple                                                                                                 en                                                                  
                                                    benchmarkY1.train                             benchmarkY1.test                                     benchmarkY1.train                               benchmarkY1.test                   
   Paragraph Retrieval \[MAP\]                                                                                                                                                                                                            
-  bm25                                                         **0** **31**     **0** **04**                **0** **29**      **0** **03**                            0 +/-097             0 +/-01                         0 +/-094             0 +/-01
-  bm25-rm3                                                         0 29             0 04                        0 26              0 03                            **0** **107**     **0** **01**                 **0** **101**     **0** **01**
-  QL-rm3                                                           0 25             0 04                        0 20              0 02                                0 084             0 01                         0 076             0 01
+  bm25                                                         **0.31**     **0.04**                **0.29**      **0.03**                            0.097             0.01                         0.094             0.01
+  bm25-rm3                                                         0.29             0.04                        0.26              0.03                            **0.107**     **0.01**                 **0.101**     **0.01**
+  QL-rm3                                                           0.25             0.04                        0.20              0.02                                0.084             0.01                         0.076             0.01
   Entity Ranking \[MAP\]                                                                                                                                                                                                                 
-  page-bm25                                                        0 03             0 005                       0 038             0 007                               0 025             0 002                        0 026             0 003
-  page-bm25-rm3                                                    0 05             0 007                       0 048             0 007                               0 037             0 003                        0 038             0 004
-  paragraph-bm25-ECM                                           **0** **23**     **0** **03**                **0** **253**     **0** **021**                       **0** **215**     **0** **01**                 **0** **21**      **0** **01**
+  page-bm25                                                        0.03             0.005                       0.038             0.007                               0.025             0.002                        0.026             0.003
+  page-bm25-rm3                                                    0.05             0.007                       0.048             0.007                               0.037             0.003                        0.038             0.004
+  paragraph-bm25-ECM                                           **0.23**     **0.03**                **0.253**     **0.021**                       **0.215**     **0.01**                 **0.21**      **0.01**
   Cluster \[Adjusted RAND Index\]                                                                                                                                                                                                        
-  TF-IDF agglomerative                                             0 16             0 06                        0 27              0 07                                0 15              0 01                         0 16              0 01
-  TF-IDF kmeans                                                    0 13             0 01                        0 12              0 01                                0 11              0 04                     **0** **19**      **0** **05**
-  SBERT kmeans                                                 **0** **38**     **0** **09**                **0** **38**      **0** **09**                        **0** **23**      **0** **02**                 **0** **19**      **0** **01**
+  TF-IDF agglomerative                                             0.16             0.06                        0.27              0.07                                0.15              0.01                         0.16              0.01
+  TF-IDF kmeans                                                    0.13             0.01                        0.12              0.01                                0.11              0.04                     **0.19**      **0.05**
+  SBERT kmeans                                                 **0.38**     **0.09**                **0.38**      **0.09**                        **0.23**      **0.02**                 **0.19**      **0.01**
   Entity Linking \[Paragraph-Macro-avg F1\]                                                                                                                                                                                              
-  WAT                                                          **0** **44**     **0** **01**                **0** **42**      **0** **01**                        **0** **332**     **0** **004**                **0** **310**     **0** **003**
+  WAT                                                          **0.44**     **0.01**                **0.42**      **0.01**                        **0.332**     **0.004**                **0.310**     **0.003**
   ------------------------------------------- -- ------------------- -------- ------- -------- ------------------ --------- ------- --------- -- -- ------------------- --------- ------- --------- ------------------ --------- ------- ---------
 :::
 
